# PRoViLE

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  example.env  pyproject.toml  requirements.txt  tbump.toml
example_result/multi_turn/: multi-turn_prompts.csv
provile/: __init__.py  llm_model.py  main.py  prompt_generator.py
provile/attack_objectives/: test_objectives.csv
provile/attack_techniques/: test_techniques.csv
tests/: test_main_helpers.py  test_prompt_generator.py
